--- a/ui/design.ui
+++ b/ui/design.ui
@@ -1850,31 +1850,6 @@
                 <property name="editTriggers">
                  <set>QAbstractItemView::NoEditTriggers</set>
                 </property>
-                <row>
-                 <property name="text">
-                  <string>1</string>
-                 </property>
-                </row>
-                <row>
-                 <property name="text">
-                  <string>2</string>
-                 </property>
-                </row>
-                <row>
-                 <property name="text">
-                  <string>3</string>
-                 </property>
-                </row>
-                <row>
-                 <property name="text">
-                  <string>4</string>
-                 </property>
-                </row>
-                <row>
-                 <property name="text">
-                  <string>5</string>
-                 </property>
-                </row>
                 <column>
                  <property name="text">
                   <string>Code</string>
@@ -1897,69 +1872,39 @@
                 </column>
                 <column>
                  <property name="text">
+                  <string>Class</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
                   <string>Type</string>
                  </property>
                 </column>
-                <item row="0" column="0">
+                <column>
                  <property name="text">
-                  <string>45</string>
+                  <string>Price</string>
                  </property>
-                </item>
-                <item row="0" column="1">
+                </column>
+                <column>
                  <property name="text">
-                  <string>Amoxyl</string>
+                  <string>Cost</string>
                  </property>
-                </item>
-                <item row="0" column="2">
+                </column>
+                <column>
                  <property name="text">
-                  <string>Amoxycilin</string>
+                  <string>Ave/Month</string>
                  </property>
-                </item>
-                <item row="0" column="3">
+                </column>
+                <column>
                  <property name="text">
-                  <string>50 mg</string>
+                  <string>High</string>
                  </property>
-                </item>
-                <item row="0" column="4">
+                </column>
+                <column>
                  <property name="text">
-                  <string>Tablet</string>
+                  <string>Low</string>
                  </property>
-                </item>
-                <item row="1" column="0">
-                 <property name="text">
-                  <string>75</string>
-                 </property>
-                </item>
-                <item row="1" column="1">
-                 <property name="text">
-                  <string>Right Med</string>
-                 </property>
-                </item>
-                <item row="1" column="2">
-                 <property name="text">
-                  <string>Amlodimin</string>
-                 </property>
-                </item>
-                <item row="1" column="3">
-                 <property name="text">
-                  <string>100 mg</string>
-                 </property>
-                </item>
-                <item row="1" column="4">
-                 <property name="text">
-                  <string>Capsule</string>
-                 </property>
-                </item>
-                <item row="2" column="0">
-                 <property name="text">
-                  <string>32</string>
-                 </property>
-                </item>
-                <item row="3" column="0">
-                 <property name="text">
-                  <string>867</string>
-                 </property>
-                </item>
+                </column>
                </widget>
               </item>
               <item row="1" column="0">
