--- a/ui/design.ui
+++ b/ui/design.ui
@@ -1768,6 +1768,24 @@
                 </item>
                </layout>
               </item>
+              <item row="4" column="0">
+               <layout class="QHBoxLayout" name="container_active_product_2">
+                <item>
+                 <widget class="QLabel" name="label_active_product_2">
+                  <property name="text">
+                   <string>Active?</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLineEdit" name="value_active_product_2">
+                  <property name="placeholderText">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
              </layout>
             </widget>
            </item>
@@ -1829,6 +1847,26 @@
                  <size>
                   <width>20</width>
                   <height>53</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="5" column="0">
+               <widget class="QPushButton" name="button_add_product">
+                <property name="text">
+                 <string>Add</string>
+                </property>
+               </widget>
+              </item>
+              <item row="6" column="0">
+               <spacer name="product_add_spacer">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>49</height>
                  </size>
                 </property>
                </spacer>
@@ -1928,9 +1966,9 @@
                </spacer>
               </item>
               <item row="1" column="2">
-               <widget class="QPushButton" name="button_save_product">
+               <widget class="QPushButton" name="button_save_edit_product">
                 <property name="text">
-                 <string>Save Product</string>
+                 <string>Save Edit</string>
                 </property>
                </widget>
               </item>
