added column for is_active in UI

--- a/ui/design.ui
+++ b/ui/design.ui
@@ -1930,6 +1930,11 @@
                 </column>
                 <column>
                  <property name="text">
+                  <string>Active?</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
                   <string>Ave/Month</string>
                  </property>
                 </column>
